--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^3.0.1",
     "typescript": "4.9.4"
   },
